kubernetes/k3s-01/workloads/gitea/middleware-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-ipallowlist
  namespace: gitea
spec:
  ipAllowList:
    sourceRange:
      - 10.200.1.1
      - 10.200.1.2
      - 10.200.1.3
      - 172.16.0.2
      - 172.16.0.3
      - 192.168.10.3
      - 192.168.10.4
      - 192.168.20.3
