kubernetes/k3s-01/workloads/gitea/ingress-route-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - namespace: gitea
          name: gitea-ipallowlist
      services:
        - name: gitea-ssh
          port: 22
