kubernetes/k3s-01/workloads/gitea/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: gitea
          name: gitea-ipallowlist
      services:
        - name: gitea-http
          kind: Service
          port: 3000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: gitea-certificate
